--- a/assets/CSS/operations-style.css
+++ b/assets/CSS/operations-style.css
@@ -10,7 +10,7 @@
     font-size: 4rem;
     text-align: center;
     width: 33.33%;
-    height: 50%;
+    height: 17.5rem;
     padding: 20% 0;
 
     box-sizing: border-box;
