Changing the logic of buttons

--- a/assets/CSS/operations-style.css
+++ b/assets/CSS/operations-style.css
@@ -10,7 +10,8 @@
     font-size: 4rem;
     text-align: center;
     width: 33.33%;
-    height: 35%;
+    /* height: 35%; */
+    height: 52.5%;
     padding: 20% 0;
 
     box-sizing: border-box;
