--- a/assets/CSS/operations-style.css
+++ b/assets/CSS/operations-style.css
@@ -1,4 +1,52 @@
+body {
+    font-family: 'Russo One', sans-serif;
+
+}
+
+.pad {
+    width: 70%;
+    font-size: 2rem;
+}
+
 .operations {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.operations-edit {
+    display: flex;
+    
+}
+.operations-math {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.buttons-c {
+    width: 50%;
+    height: 5rem;
+
+    box-sizing: border-box;
+    border: outset 5px grey;
+    background-color: white;
+    cursor: pointer;
+
+}
+
+.buttons-o{
+    width: 100%;
+    height: 5rem; 
+
+    box-sizing: border-box;
+    border: outset 5px grey;
+    background-color: white;
+    cursor: pointer;
+
+
+}
+
+/* .operations {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -18,7 +66,6 @@
     font-size: 4rem;
     text-align: center;
     width: 33.33%;
-    /* height: 35%; */
     height: 26%;
     padding: 20% 0;
 
@@ -27,4 +74,5 @@
     background-color: white;
     cursor: pointer;
 
-}
+} */
+
