--- a/assets/CSS/display-style.css
+++ b/assets/CSS/display-style.css
@@ -41,11 +41,15 @@ html {
 .display-numbers--calc {
   font-size: 4rem;
   color: red;
+  box-sizing: border-box;
+  border-bottom: 2px solid grey;
 }
 
 .display-numbers--current {
+  margin-top: 1rem;
   font-size: 4.5rem;
   color: blue;
+
 }
 
 .pads-container {
