--- a/assets/CSS/display-style.css
+++ b/assets/CSS/display-style.css
@@ -88,7 +88,7 @@ html {
 }
 
 .buttons-n:nth-last-child(2) {
-  background-color: red;
+  background-color: rgb(0, 128, 255);;
 }
 
 #equal {
@@ -99,6 +99,6 @@ html {
 
   box-sizing: border-box;
   border: outset 5px grey;
-  background-color: blue;
+  background-color: rgb(0, 128, 255);
   cursor: pointer;
 }
