--- a/assets/CSS/display-style.css
+++ b/assets/CSS/display-style.css
@@ -83,6 +83,10 @@ html {
   color: magenta;
 }
 
+.buttons-n-clicked:hover {
+  color: rgb(255, 0, 0);
+}
+
 .buttons-n:active {
   color: grey;
 }
@@ -105,4 +109,21 @@ html {
   border: outset 5px grey;
   background-color: rgb(0, 128, 255);
   cursor: pointer;
+}
+
+@media screen and (max-width: 500px) {
+  .calculator-container {
+    height: 85vh;
+    width: 80vw;
+    padding: 1rem;
+  }
+
+  .buttons-n {
+    font-size: 4rem;
+  }
+
+  .numbers {
+    margin-right: 0rem;
+  }
+  
 }
