Changing the hovers

--- a/assets/CSS/display-style.css
+++ b/assets/CSS/display-style.css
@@ -79,8 +79,9 @@ html {
   cursor: pointer;
 }
 
-.buttons-n:hover {
-  color: magenta;
+.buttons-n:hover, #equal:hover {
+  color: rgb(212, 212, 248);
+  background-image: linear-gradient(to right, rgb(74, 74, 255) , blue);
 }
 
 .buttons-n-clicked:hover {
