--- a/assets/CSS/display-style.css
+++ b/assets/CSS/display-style.css
@@ -1,5 +1,9 @@
 html {
-  background-color: #0e0b16;
+  background-color: #0e0b16; 
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+  
 }
 
 .calculator-container {
@@ -16,7 +20,6 @@ html {
   align-items: flex-end;
   width: auto;
   max-width: auto;
-  
 }
 
 .operations-n #result {
@@ -49,7 +52,6 @@ html {
   margin-top: 1rem;
   font-size: 4.5rem;
   color: blue;
-
 }
 
 .pads-container {
@@ -79,9 +81,10 @@ html {
   cursor: pointer;
 }
 
-.buttons-n:hover, #equal:hover {
+.buttons-n:hover,
+#equal:hover {
   color: rgb(212, 212, 248);
-  background-image: linear-gradient(to right, rgb(74, 74, 255) , blue);
+  background-image: linear-gradient(to right, rgb(74, 74, 255), blue);
 }
 
 .buttons-n-clicked:hover {
@@ -97,7 +100,7 @@ html {
 }
 
 .buttons-n:nth-last-child(2) {
-  background-color: rgb(0, 128, 255);;
+  background-color: rgb(0, 128, 255);
 }
 
 #equal {
@@ -114,9 +117,23 @@ html {
 
 @media screen and (max-width: 500px) {
   .calculator-container {
-    height: 85vh;
-    width: 80vw;
-    padding: 1rem;
+    margin: 2vh auto;
+    height: 94vh;
+    width: 90vw;
+    padding: 0.75rem;
+  }
+
+  .buttons-n,
+  #equal {
+    height: 17.75vh;
+  }
+
+  .display-numbers--calc {
+    font-size: 3rem;
+  }
+
+  .display-numbers--current {
+    font-size: 3.1rem;
   }
 
   .buttons-n {
@@ -126,5 +143,4 @@ html {
   .numbers {
     margin-right: 0rem;
   }
-  
 }
