Setting the year automatically in the copywrite part

--- a/assets/CSS/display-style.css
+++ b/assets/CSS/display-style.css
@@ -144,3 +144,12 @@ html {
     margin-right: 0rem;
   }
 }
+/* _________________________________________________________________________________________________________ */
+.copywrite {
+    color: #898ea0;
+    margin-top: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
