--- a/assets/CSS/display-style.css
+++ b/assets/CSS/display-style.css
@@ -10,9 +10,9 @@ html {
   border-radius: 1.75rem;
   margin: 5vh auto;
   background-color: #413a54;
-  height: 80vh;
+  height: 84vh;
   width: 50vw;
-  padding: 2rem;
+  padding: 1rem;
 }
 
 .operations-n {
@@ -58,7 +58,7 @@ html {
   margin: 0.5rem 0;
   display: flex;
   width: 100%;
-  height: 69%;
+  height: 70%;
 }
 
 .numbers {
@@ -115,10 +115,21 @@ html {
   cursor: pointer;
 }
 
+.copywrite {
+  color: #b3b3b3;
+  margin-top: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+/* MOBILE */
+
 @media screen and (max-width: 500px) {
   .calculator-container {
     margin: 2vh auto;
-    height: 94vh;
+    height: 95vh;
     width: 90vw;
     padding: 0.75rem;
   }
@@ -133,7 +144,7 @@ html {
   }
 
   .display-numbers--current {
-    font-size: 3.1rem;
+    font-size: 2.5rem;
   }
 
   .buttons-n {
@@ -143,13 +154,8 @@ html {
   .numbers {
     margin-right: 0rem;
   }
-}
-/* _________________________________________________________________________________________________________ */
-.copywrite {
-    color: #898ea0;
-    margin-top: 2em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+  .copywrite {
+    margin-top: 5em;
+    font-size: 0.8em;
+  }
 }
